<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.lkp.ActivityLKPList">
    <item
        android:visible="false"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_summary_lkp"
        android:orderInCategory="101"
        android:title="@string/action_summary_lkp"
        android:icon="@drawable/ic_offline_pin_black_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_task_log"
        android:orderInCategory="102"
        android:title="@string/action_task_log"
        android:icon="@drawable/ic_access_time_black_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_gps_log"
        android:orderInCategory="102"
        android:title="@string/action_gps_log"
        android:icon="@drawable/ic_person_pin_circle_black_24dp"
        app:showAsAction="ifRoom" />
</menu>
